fintech-loan-k8s/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loan-service
  namespace: fintech
spec:
  selector:
    app: loan-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
